FIXED NAVBAR ON iot-applications.html

--- a/iot-applications.html
+++ b/iot-applications.html
@@ -21,8 +21,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="./iot-applications.html">IoT Applications</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                >
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,7 +49,7 @@
 
         <div class="left" style="background-color:#5CDB95;">
             <h2 class="head-2">IoT Apps</h2>
-            <p class="content">IoT application refers to any kind of system or environment which consists of a number of
+            <p class="contentt">IoT application refers to any kind of system or environment which consists of a number of
                 devices, services and/or sensors. The application is said to be an Internet of Things applicaion if it
                 is connected
                 to the Internet and works in real-time. It should be stable, secure and the integration of devices
@@ -60,7 +60,7 @@
 
         <div class="middle" style="background-color:#5CDB95;">
             <h2 class="head-2">Smart Building</h2>
-            <p class="content">A building can be termed as Smart if it's various processes and systems are automated or
+            <p class="contentt">A building can be termed as Smart if it's various processes and systems are automated or
                 made efficient
                 with the help of Internet Of Things applications. This concept can be better explained with the
                 help of some expample senerios. To begin with, automated doors can be installed to make the entry/exit
@@ -71,7 +71,7 @@
 
         <div class="right" style="background-color:#5CDB95;">
             <h2 class="head-2">Control Interface</h2>
-            <p class="content">These are the web-based interfaces which are connected to various types of system with
+            <p class="contentt">These are the web-based interfaces which are connected to various types of system with
                 the help of
                 internet and cloud to control any system in real-time. For example, the HVAC system (Heating,
                 Ventilation,
@@ -93,6 +93,20 @@
 
     </div>
 
+
+    
+    
 </body>
+
+<!-- Required dependencies for Bootstrap navbar collapse -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+    integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
+    integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"
+    integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </html>
