ADD FOOTER TO ALL PAGES

--- a/homepage.html
+++ b/homepage.html
@@ -76,6 +76,7 @@
 
 <body class="d-flex h-100 text-center text-bg-dark">
 
+
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
@@ -99,13 +100,22 @@
             </p>
         </main>
 
-        <footer class="mt-auto text-white-50">
-            <p>Copyright Kanishk Jain 2023</p>
+        <!-- footer -->
+        <footer class="text-center text-lg-start">
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2023 Copyright:
+                <a class="text-dark" href="https://github.com/kanishkjain0263" target="_blank"
+                    rel="noopener noreferrer">Kanishk Jain</a>
+            </div>
+            <!-- Copyright -->
         </footer>
     </div>
 
 
 
 </body>
+
+
 
 </html>
