--- a/iot-applications.html
+++ b/iot-applications.html
@@ -21,8 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="./iot-applications.html">IoT Applications</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,7 +48,8 @@
 
         <div class="left" style="background-color:#5CDB95;">
             <h2 class="head-2">IoT Apps</h2>
-            <p class="contentt">IoT application refers to any kind of system or environment which consists of a number of
+            <p class="contentt">IoT application refers to any kind of system or environment which consists of a number
+                of
                 devices, services and/or sensors. The application is said to be an Internet of Things applicaion if it
                 is connected
                 to the Internet and works in real-time. It should be stable, secure and the integration of devices
@@ -93,9 +93,18 @@
 
     </div>
 
+    <!-- footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-dark" href="https://github.com/kanishkjain0263" target="_blank"
+                rel="noopener noreferrer">Kanishk Jain</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 
-    
-    
+
 </body>
 
 <!-- Required dependencies for Bootstrap navbar collapse -->
