--- a/skill.html
+++ b/skill.html
@@ -150,6 +150,18 @@
             </div>
         </div>
     </div>
+
+    <!-- !-- footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-dark" href="https://github.com/kanishkjain0263" target="_blank"
+                rel="noopener noreferrer">Kanishk Jain</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+
     <!-- jQuery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
